--- a/src/main/resources/phrase.yml
+++ b/src/main/resources/phrase.yml
@@ -12,16 +12,18 @@ GET_GIFT: "&dWelcome! Here is you gift!"
 Max_Get_Times_Set: "&aSuccessful to set the maximum get gift times!"
 Max_Get_Times_Set_Infinite: "&aSuccessful to set the maximum get gift times infinity!"
 Max_Get_Times_Cannot_Zero: "&cCannot set the maximum get gift times is zero!"
+Reset_Player: "&aThis player gift status has been reset!"
 Item_Added: "&aItem successful to added!"
 Item_Remove: "&aItem successful to &cremove&a!"
 World_No_Data: "&cThis world haven't added to this plugin!"
 World_No_Item: "&cThis world haven't added items!"
 
 Help:
-  Cmd_PluginInfo: "&7WorldGifts info."
-  Cmd_Help: "&7WorldGifts help."
-  Cmd_List: "&7List all world items."
-  Cmd_SetMaxTimes: "&7Set maximum get gift times (-1 is infinitely)."
+  Cmd_PluginInfo: "&7WorldGifts info"
+  Cmd_Help: "&7WorldGifts help"
+  Cmd_List: "&7List all world items"
+  Cmd_SetMaxTimes: "&7Set maximum get gift times (-1 is infinitely)"
+  Cmd_Reset_Player: "&7Reset a player gift status"
   Cmd_Put: "&7Put a item to world"
   Cmd_Remove: "&7Remove a item from world"
   Cmd_Reload: "&7Reload WorldGifts"
