--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: WorldGifts
 main: com.tanpn.worldgifts.WorldGifts
-version: 0.6
+version: 0.7
 author: OnikurChan (TsnYikHei)
 description: Let your bukkit auto give player a gift on join.
 website: http://dev.bukkit.org/bukkit-plugins/worldgifts/
@@ -34,6 +34,9 @@ permissions:
       default: op
   worldgifts.setmaxtimes:
       description: Allows you to set maximum get gift times
+      default: op
+  worldgifts.resetplayer:
+      description: Allows you to reset a player gift status
       default: op
   worldgifts.put:
       description: Allows you to add item to world
