--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: WorldGifts
 main: com.tanpn.worldgifts.WorldGifts
-version: 0.8
+version: 0.9
 author: OnikurChan (TsnYikHei)
 description: Let your bukkit auto give player a gift on join.
 website: http://dev.bukkit.org/bukkit-plugins/worldgifts/
@@ -20,6 +20,7 @@ permissions:
           worldgifts.help: true
           worldgifts.list: true
           worldgifts.setmaxtimes: true
+          worldgifts.resetplayer: true
           worldgifts.put: true
           worldgifts.remove: true
           worldgifts.reload: true
